--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <h1>Science Final Project Q4: All About GMOs!</h1>
         
-        <h2>What is Genetic Enjineering?:</h2>
+        <h2>What is Genetic Engineering?:</h2>
 
         <p>Genetic engineering (also called genetic modification) is a process that uses laboratory-based technologies to alter the DNA makeup of an 
             organism. This may involve changing a single base pair (A-T or C-G), deleting a region of DNA or adding a new segment of DNA. For example,
