--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 font-family:sans-serif;
             }
             img{
-                width:400px;
+                width:auto;
                 
             }
             
