--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 background-color:black;
                 color:white;
                 font-family:sans-serif;
-                
+                font-size: 30px;
             }
             img {
                 width:800px;
